# yafowil.widget.ace

./: .gitignore  CHANGES.rst  HISTORY.rst  Makefile  README.rst  buildout.cfg  mx.ini  mxmake.yaml  package.json  pyproject.toml  rollup.conf.js  setup.py
.github/workflows/: test_js.yaml  test_py.yaml
js/: karma-coverage.js  karma.conf.js  rollup.conf.js  wtr.config.mjs
js/src/: bundle.js  widget.js
js/src/bootstrap5/: bundle.js  widget.js
js/src/default/: widget.js
js/tests/: test_ace.js
js/tests/bootstrap5/: test_ace.js
js/tests/default/: test_ace.js
scripts/: clean.sh  coverage.sh  install.sh  styles.sh  test.sh
scss/: bootstrap5.scss  styles.scss
scss/bootstrap5/: widget.scss
src/yafowil/widget/ace/: __init__.py  example.py  tests.py  widget.py  widget.rst  yafowil.widget.ace.js  yafowil.widget.ace.js.map  yafowil.widget.ace.min.js  yafowil.widget.ace.min.js.map
src/yafowil/widget/ace/resources/: widget.css  widget.js  widget.js.map  widget.min.css  widget.min.js  widget.min.js.map  yafowil.widget.ace.js  yafowil.widget.ace.js.map  yafowil.widget.ace.min.js  yafowil.widget.ace.min.js.map
src/yafowil/widget/ace/resources/bootstrap5/: widget.css  widget.js  widget.min.css  widget.min.js
src/yafowil/widget/ace/resources/default/: widget.js  widget.min.css  widget.min.js
src/yafowil/widget/ace/tests/: test_widget.py
